Move more dependencies from ArDoCo Parent